--- a/windows/.gitignore
+++ b/windows/.gitignore
@@ -15,3 +15,8 @@ x86/
 *.[Cc]ache
 # but keep track of directories ending in .cache
 !*.[Cc]ache/
+
+# Remember to never publicly share your keystore.
+# See https://flutter.dev/docs/deployment/android#reference-the-keystore-from-the-app
+*.keystore
+*.jks
